Import of MDOOTSON/Wx-Package-Win32-0.05 from CPAN.
gitpan-cpan-distribution: Wx-Package-Win32
gitpan-cpan-version:      0.05
gitpan-cpan-path:         MDOOTSON/Wx-Package-Win32-0.05.tar.gz
gitpan-cpan-author:       MDOOTSON
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,16 +1,34 @@
+#########################################################
+
 Wx-Package-Win32
 
-Version 0.04.
+Version 0.05.
+
+(c)2006 Mark Dootson
+
+#########################################################
 
 Package to ease wxPerl application packaging with PAR and 
-PerlApp/PDK on MSWin32.
+PerlApp, PDK and Perl2Exe on MSWin32.
 Just include in BEGIN block at top of main script.
 
 BEGIN { use Wx::Package::Win32; }
 
+For Perl2Exe, add an additional use statement to
+ensure correct module clean up
+
+BEGIN { use Wx::Package::Win32; }
+use Wx::Package::Win32;
+
+PAR users are provided with a simple amended pp called
+wxperlpp (wxperlpp.bat in ../bin). This adds the
+necessary Wx DLLs in the correct place.
+
+eg run :
+wxperlpp --gui -o myapp.exe myscript.pl
 
 REQUIRES >= Perl 5.8.1
-         >= Wx   0.27
+         >= Wx   0.28
 
 
 INSTALLATION
