--- a/README
+++ b/README
@@ -2,9 +2,14 @@
 
 Wx-Package-Win32
 
-Version 0.07.
+Version 0.08.
 
 (c)2006 Mark Dootson
+
+#########################################################
+
+For Wx versions >= 0.49 you should use Wx::Perl::Packager
+instead which provides handy tools for PDK / PAR.
 
 #########################################################
 
